--- a/Home.html
+++ b/Home.html
@@ -30,9 +30,7 @@
             <div class="carousel__container">
                 <h2>Hindi Songs</h2>
                 <div class="carousel-item">
-                    <img class="carousel-item__img"
-                        src="song_img/ishq_wala.jpg"
-                        alt="people" />
+                    <img class="carousel-item__img" src="song_img/ishq_wala.jpg" alt="people" />
                     <div class="carousel-item__details">
                         <div class="controls">
                             <span class="fas fa-play-circle"></span>
@@ -43,9 +41,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="carousel-item__img"
-                        src="song_img/Paniyo_sa.jpg"
-                        alt="people" />
+                    <img class="carousel-item__img" src="song_img/Paniyo_sa.jpg" alt="people" />
                     <div class="carousel-item__details">
                         <div class="controls">
                             <span class="fas fa-play-circle"></span>
@@ -56,9 +52,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="carousel-item__img"
-                        src="song_img/tu_mile.jpg"
-                        alt="people" />
+                    <img class="carousel-item__img" src="song_img/tu_mile.jpg" alt="people" />
                     <div class="carousel-item__details">
                         <div class="controls">
                             <span class="fas fa-play-circle"></span>
@@ -69,9 +63,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="carousel-item__img"
-                        src="song_img/tere naina.jpg"
-                        alt="people" />
+                    <img class="carousel-item__img" src="song_img/tere naina.jpg" alt="people" />
                     <div class="carousel-item__details">
                         <div class="controls">
                             <span class="fas fa-play-circle"></span>
@@ -82,9 +74,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="carousel-item__img"
-                        src="song_img/O_mahi.jpg"
-                        alt="people" />
+                    <img class="carousel-item__img" src="song_img/O_mahi.jpg" alt="people" />
                     <div class="carousel-item__details">
                         <div class="controls">
                             <span class="fas fa-play-circle"></span>
@@ -95,9 +85,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="carousel-item__img"
-                        src="song_img/isme_tera.jpg"
-                        alt="people" />
+                    <img class="carousel-item__img" src="song_img/isme_tera.jpg" alt="people" />
                     <div class="carousel-item__details">
                         <div class="controls">
                             <span class="fas fa-play-circle"></span>
@@ -109,9 +97,7 @@
                 </div>
 
                 <div class="carousel-item">
-                    <img class="carousel-item__img"
-                        src="song_img/Ha hassi ban gaye.jpg"
-                        alt="people" />
+                    <img class="carousel-item__img" src="song_img/Ha hassi ban gaye.jpg" alt="people" />
                     <div class="carousel-item__details">
                         <div class="controls">
                             <span class="fas fa-play-circle"></span>
@@ -128,9 +114,7 @@
             <div class="carousel__container">
                 <h2>Tamil song</h2>
                 <div class="carousel-item">
-                    <img class="carousel-item__img"
-                        src="song_img/beast.jpg"
-                        alt="people" />
+                    <img class="carousel-item__img" src="song_img/beast.jpg" alt="people" />
                     <div class="carousel-item__details">
                         <div class="controls">
                             <span class="fas fa-play-circle"></span>
@@ -141,9 +125,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="carousel-item__img"
-                        src="song_img/vikram.jpg"
-                        alt="people" />
+                    <img class="carousel-item__img" src="song_img/vikram.jpg" alt="people" />
                     <div class="carousel-item__details">
                         <div class="controls">
                             <span class="fas fa-play-circle"></span>
@@ -154,9 +136,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="carousel-item__img"
-                        src="song_img/unakku_thaan.jpg"
-                        alt="people" />
+                    <img class="carousel-item__img" src="song_img/unakku_thaan.jpg" alt="people" />
                     <div class="carousel-item__details">
                         <div class="controls">
                             <span class="fas fa-play-circle"></span>
@@ -167,9 +147,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="carousel-item__img"
-                        src="song_img/Thee_thalapathy.jpg"
-                        alt="people" />
+                    <img class="carousel-item__img" src="song_img/Thee_thalapathy.jpg" alt="people" />
                     <div class="carousel-item__details">
                         <div class="controls">
                             <span class="fas fa-play-circle"></span>
@@ -180,9 +158,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="carousel-item__img"
-                        src="song_img/badass.jpg"
-                        alt="people" />
+                    <img class="carousel-item__img" src="song_img/badass.jpg" alt="people" />
                     <div class="carousel-item__details">
                         <div class="controls">
                             <span class="fas fa-play-circle"></span>
@@ -193,9 +169,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="carousel-item__img"
-                        src="song_img/Hukkum.jpg"
-                        alt="people" />
+                    <img class="carousel-item__img" src="song_img/Hukkum.jpg" alt="people" />
                     <div class="carousel-item__details">
                         <div class="controls">
                             <span class="fas fa-play-circle"></span>
@@ -207,9 +181,7 @@
                 </div>
 
                 <div class="carousel-item">
-                    <img class="carousel-item__img"
-                        src="song_img/beastmode.jpg"
-                        alt="people" />
+                    <img class="carousel-item__img" src="song_img/beastmode.jpg" alt="people" />
                     <div class="carousel-item__details">
                         <div class="controls">
                             <span class="fas fa-play-circle"></span>
@@ -226,9 +198,7 @@
             <div class="carousel__container">
                 <h2>Punjabi song</h2>
                 <div class="carousel-item">
-                    <img class="carousel-item__img"
-                        src="song_img/Sarkar_sadi.jpg"
-                        alt="people" />
+                    <img class="carousel-item__img" src="song_img/Sarkar_sadi.jpg" alt="people" />
                     <div class="carousel-item__details">
                         <div class="controls">
                             <span class="fas fa-play-circle"></span>
@@ -239,9 +209,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="carousel-item__img"
-                        src="song_img/siddhu-musawala.jpg"
-                        alt="people" />
+                    <img class="carousel-item__img" src="song_img/siddhu-musawala.jpg" alt="people" />
                     <div class="carousel-item__details">
                         <div class="controls">
                             <span class="fas fa-play-circle"></span>
@@ -252,9 +220,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="carousel-item__img"
-                        src="song_img/Wah-Wai-Wahh-.jpg"
-                        alt="people" />
+                    <img class="carousel-item__img" src="song_img/Wah-Wai-Wahh-.jpg" alt="people" />
                     <div class="carousel-item__details">
                         <div class="controls">
                             <span class="fas fa-play-circle"></span>
@@ -265,9 +231,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="carousel-item__img"
-                        src="song_img/Thee_thalapathy.jpg"
-                        alt="people" />
+                    <img class="carousel-item__img" src="song_img/Thee_thalapathy.jpg" alt="people" />
                     <div class="carousel-item__details">
                         <div class="controls">
                             <span class="fas fa-play-circle"></span>
@@ -278,9 +242,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="carousel-item__img"
-                        src="song_img/badass.jpg"
-                        alt="people" />
+                    <img class="carousel-item__img" src="song_img/badass.jpg" alt="people" />
                     <div class="carousel-item__details">
                         <div class="controls">
                             <span class="fas fa-play-circle"></span>
@@ -291,9 +253,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="carousel-item__img"
-                        src="song_img/Hukkum.jpg"
-                        alt="people" />
+                    <img class="carousel-item__img" src="song_img/Hukkum.jpg" alt="people" />
                     <div class="carousel-item__details">
                         <div class="controls">
                             <span class="fas fa-play-circle"></span>
@@ -305,9 +265,7 @@
                 </div>
 
                 <div class="carousel-item">
-                    <img class="carousel-item__img"
-                        src="song_img/beastmode.jpg"
-                        alt="people" />
+                    <img class="carousel-item__img" src="song_img/beastmode.jpg" alt="people" />
                     <div class="carousel-item__details">
                         <div class="controls">
                             <span class="fas fa-play-circle"></span>
@@ -346,7 +304,7 @@
         <div class="icons">
             <!-- fontawesome icons -->
             <i class="fa-solid fa-xl fa-backward-step" id="previous"></i>
-            <i class="fab fa-twitter" id="masterPlay"></i>
+            <i class="fa-solid fa-2xl fa-circle-play" id="masterPlay"></i>
             <i class="fa-solid fa-xl fa-forward-step" id="next"></i>
         </div>
         <div class="progressBarContent">
