--- a/aboutus.html
+++ b/aboutus.html
@@ -40,7 +40,8 @@
               <a href="https://github.com/Pranav7038"><i class="fab fa-github" id="T"></i></a>
             </li>
             <li>
-              <a href="https://www.linkedin.com/in/pranav-kshirsagar-3a204823a/"><i class="fab fa-linkedin-in" id="L"></i></a>
+              <a href="https://www.linkedin.com/in/pranav-kshirsagar-3a204823a/"><i class="fab fa-linkedin-in"
+                  id="L"></i></a>
             </li>
             <li>
               <a href="https://www.instagram.com/pranav8289"><i class="fab fa-instagram" id="I"></i></a>
@@ -55,19 +56,23 @@
       </div>
       <div class="content">
         <div class="detail">
-          <h2>Pranav Hydrabade<br /><span>Senior Designer</span></h2>
+          <h2>Pranav Hydrabade<br /><span>Designer & Developer</span></h2>
           <ul class="sci">
             <li>
-              <a href="https://www.facebook.com/pranav.hydrabade.7?mibextid=ZbWKwL"><i class="fab fa-facebook-f"></i></a>
+              <a href="https://www.facebook.com/pranav.hydrabade.7?mibextid=ZbWKwL"><i
+                  class="fab fa-facebook-f"></i></a>
             </li>
             <li>
               <a href="https://github.com/pranav2329h"><i class="fab fa-github" id="T"></i></a>
             </li>
             <li>
-              <a href="https://www.linkedin.com/in/pranav-hydrabade-10952a255?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="fab fa-linkedin-in" id="L"></i></a>
+              <a
+                href="https://www.linkedin.com/in/pranav-hydrabade-10952a255?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i
+                  class="fab fa-linkedin-in" id="L"></i></a>
             </li>
             <li>
-              <a href="https://www.instagram.com/mr.pranav_h?igsh=OWZ1dXV6OXo2aml3"><i class="fab fa-instagram" id="I"></i></a>
+              <a href="https://www.instagram.com/mr.pranav_h?igsh=OWZ1dXV6OXo2aml3"><i class="fab fa-instagram"
+                  id="I"></i></a>
             </li>
           </ul>
         </div>
@@ -79,19 +84,22 @@
       </div>
       <div class="content">
         <div class="detail">
-          <h2>Sahil Choudhary<br /><span>Senior Designer</span></h2>
+          <h2>Sahil Choudhary<br /><span>Designer</span></h2>
           <ul class="sci">
             <li>
               <a href="#"><i class="fab fa-facebook-f"></i></a>
             </li>
             <li>
-              <a href="#"><i class="fab fa-github" id="T"></i></a>
+              <a href="https://github.com/sahil8669"><i class="fab fa-github" id="T"></i></a>
             </li>
             <li>
-              <a href="#"><i class="fab fa-linkedin-in" id="L"></i></a>
+              <a
+                href="https://www.linkedin.com/in/sahil-choudhary-1549822b7?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BjTrxyBgHRDeroHXOnKZbiw%3D%3D"><i
+                  class="fab fa-linkedin-in" id="L"></i></a>
             </li>
             <li>
-              <a href="#"><i class="fab fa-instagram" id="I"></i></a>
+              <a href="https://www.instagram.com/sahil0507_choudhary?igsh=c2k5MTJyZHJoMHo4"><i class="fab fa-instagram"
+                  id="I"></i></a>
             </li>
           </ul>
         </div>
